2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 445/bsps
	* bsp_specs: Hand edited to duplicate change Ralf applied to the CVS
	trunk.

2003-08-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 461/bsps
	* start/Makefile.am: Correct generation of startup16.bin.

2003-08-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Don't include @RTEMS_BPS@.cfg.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-07-08	Joel Sherrill <joel@OARcorp.com>

	* console/console.c: Correct typo.

2003-05-08	Chris Johns  <cjohns@cybertec.com.au>

	* HOWTO:
	Updated the GRUB version info and how to build GRUB from source.
	Added how to boot over the network with a PXE Netboot BIOS.

2003-04-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/.cvsignore: New.

2003-03-25	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	PR 368/filesystems
	* startup/ldsegs.S: Increase alignment.
	* Makefile.am, configure.ac, include/bsp.h, wrapup/Makefile.am:
	Added IDE supporting infrastructure.
	* ide/Makefile.am, ide/ide.c, ide/idecfg.c: New files.  Added
	BSP support for libchip standard ide driver.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 353/bsps
	* include/bsp.h: Let the application override the network driver
	and attach routine.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Add FreeBSD SYSCTL() sections for networking.

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* 3c509/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* ne2000/Makefile.am: Don't include @RTEMS_BSP@.cfg.